--- a/tailwind-practice/public/index.html
+++ b/tailwind-practice/public/index.html
@@ -17,8 +17,8 @@
             </div>
             <ul class="flex flex-col sm:flex-row" id="nav">
                 <li class="mx-8"><a href="index.html">Home</a></li>
-                <li class="mx-8">About</li>
-                <li class="mx-8">contact</li>
+                <li class="mx-8"><a href="#">About</a></li>
+                <li class="mx-8"><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
