--- a/tailwind-practice/public/singleRecipie.html
+++ b/tailwind-practice/public/singleRecipie.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipie</title>
+    <title>Recipe</title>
     <link rel="stylesheet" href="tailwind-all.css">
 </head>
 <body>
-    <header class="flex justify-center md:justify-start">
-        <h1 class="font-mono text-5xl font-light text-blue-800 my-10 mx-16">Receipie</h1>
+    <header class="flex justify-center md:justify-start bg-gray-800 mb-5 md:mb-12">
+        <h1 class="font-mono md:text-5xl text-3xl font-light text-gray-300 my-10 mx-16">Recipe</h1>
     </header>
     <main>
         <div class="flex flex-col md:flex-row">
